--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,7 @@ body{
     padding: 0px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+.text{
+    font-size: 18px;
+    color: #590585;
+}
